--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
 <script type="text/javascript" charset="utf-8">
-    var socket = io();
+    var socket = io({ transports: ["websocket"] });
     var start = null;
     socket.on('connect', function() {
         socket.emit('my event', {data: 'I\'m connected!'});
